# huc

./: .gitignore  README  appveyor.yml  whats.new
doc/pce/: library.txt  sprites.txt  usage.txt
examples/: Makefile
examples/acd/: Makefile  ac_test.c  ac_test.cue
examples/designer/: waves.c
examples/promotion/: Makefile  promotion.c  readme.txt  tilemap#files.txt  tilemap.pcx  tilemap.pmp  tilemap.pmp#layer~Layer 1#map001.stm
examples/scroll/: scroll.c
examples/sgx/: Makefile  sgx_test.c  sgx_test.cue
examples/shmup/: Makefile  shmup.c
include/pce/: AC.h  cdrom.asm  equ.inc  huc.asm  huc.h  huc.inc  huc_bram.asm  huc_gfx.asm  huc_misc.asm  library.asm  sgx.h  sgx_gfx.asm  sound.inc  startup.asm
src/: CMakeLists.txt  Make_src.inc
src/huc/: CMakeLists.txt  code.c  code.h  const.c  const.h  data.c  data.h  defs.h  enum.c  enum.h  error.c  expr.c  expr.h  function.c  function.h  gen.c  gen.h  initials.c  io.c  io.h  lex.c  lex.h  main.c  main.h  optimize.c  pragma.c  pragma.h  preproc.c  preproc.h  primary.c  primary.h  pseudo.c  pseudo.h  stmt.c  stmt.h  struct.c  sym.c  sym.h  version.h.in  while.c  (+1 more)
src/isolink/: main.c  main.h
src/mkit/as/: CMakeLists.txt  Makefile  assemble.c  atari.c  atari.h  code.c  command.c  crc.c  defs.h  expr.c  expr.h  externs.h  func.c  input.c  inst.h  macro.c  main.c  map.c  mml.c  nes.c  nes.h  output.c  pce.c  pce.h  pcx.c  proc.c  protos.h  symbol.c  vars.h  version.h
src/mkit/as/pngread/: CMakeLists.txt  Makefile  pnglibconf.h  readme.txt
src/mkit/develo/: Makefile  execmx.c  getrom.c  perun.c
src/mkit/develo/lib/: command.c  crc16.h  develo.h  init.c  mx.c  slave.c  xfer.c
src/tools/mml/: BEAST.MML  LABYRINT.MML  SAPHIRE.MML  STEP.MML  mml.c
src/tools/mod2mml/: mod2mml.c
src/tools/pcxtool/: pcxtool.c
test/manual/: overlay.sh  overlay1.c  overlay2.c
test/tests/: 20011024-1.c  20200414.c  huc-addb.c  huc-addxs.c  huc-constexpr.c  huc-farptr.c  huc-farptr2.c  huc-faststack.c  huc-strn.c  huc-stws.c
tgemu/: Makefile  game.c
tgemu/src/: bitflip.h  changelog  fileio.c  fileio.h  makefile  pce.c  pce.h  pcecrc.h  porting.txt  psg.c  psg.h  readme.txt  render.c  render.h  shared.h  system.c  system.h  types.h  vce.c  vce.h  vdc.c  vdc.h
tgemu/src/cpu/: h6280.c  h6280.h  h6280ops.h  tblh6280.c
